Sigil v0.4.0 ß1 ADD_DATE
    - Sigil now preserves custom unique identifiers in the OPF (issue #552)
    - removed support for the Sigil-proprietary SGF format
    - the user can now edit the OPF file by hand (issue #281) 
    - the user can now edit the NCX file by hand (issue #282)
    - the OPF file is now preserved on import (issue #586)
    - the NCX file is now preserved on import (issue #283)
    - the Table Of Contents editor has been replaced with a new Table of Contents sidebar;
    clicking on an item in this sidebar takes the user to the target location, enabling TOC
    navigation (issue #100)
    - a dialog now informs the user if his XHTML, NCX or OPF documents are not well-formed 
    XML (with error location and description), thus allowing him to fix the potential problems
    by hand instead of leaving them to Tidy to fix (issue #519)
    - fixed a rare issue with no tab opened by default when loading epubs
    - made the sigil.sh startup script more robust (courtesy of Craig Sanders) (issue #737) 

Sigil v0.3.4 2011.01.12.
    - fixed a regression ("Not a folder" error) with opening certain epub files on Mac and 
    Linux systems (issue #731) 

Sigil v0.3.3 2011.01.06.
    - added a small "Donate" button to the toolbar and a related entry in the Help menu 
    - added a .desktop file for the make install target (courtesy of Richard Gibert)
    - this time *really* worked around a Tidy bug that added blank lines to the start of <pre> 
    and <style> elements (issue #655)
    - updated ZipArchive from 4.0.1 to 4.1.0
    - fixed a regression crash bug with loading extremely rare HTML content documents that have
    an internal DTD subset
    - added a workaround for a crash bug caused by invalid epubs that use obfuscated fonts but 
    with incorrect UUID URN key syntax (issue #709)
    - integrated the FlightCrew epub validation library; a new toolbar icon triggers epub 
    validation and displays the results (issue #28)