@@ -13,4 +13,3 @@ Rights|Information about rights held in and over the publication. Rights informa
 DOI|Digital Object Identifier
 ISBN|International Standard Book Number
 ISSN|International Standard Serial Number
-CustomID|A custom identifier for the publication. Use only if necessary.
